# gameify_notifications

./: .gitignore  CONSTITUTION.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
docs/: notification-capture-ubuntu.md  snap-to-deb-firefox.md
gameify_notifications/: __init__.py  __main__.py  app.py  config.py  focus.py  geometry.py  logsetup.py  rules.py  state.py  tray.py
gameify_notifications/backends/: __init__.py
gameify_notifications/backends/qt/: __init__.py  _context.py  backend.py  hud_controller.py  overlay_window.py  panel_dock.py  panel_window.py  persistence.py  screens.py  (+2 more)
gameify_notifications/huds/: __init__.py  bar_color.py  cod.py  goldeneye.py  halo.py  mario.py  params.py  pokemon.py  shield_health.py  stardew.py
gameify_notifications/sources/: __init__.py  dbus_source.py  windows_source.py
gnome-extension/: README.md  install.sh
gnome-extension/cod-tray-purge@cod.local/: extension.js  metadata.json  purge.js
gnome-extension/gameify-tray-purge@gameify.local/: extension.js  metadata.json  purge.js
gnome-extension/tests/: test_purge.js
tests/: TEST_PLAN.md  conftest.py  test_app.py  test_backend.py  test_bar_color.py  test_cli.py  test_config.py  test_factories.py  test_focus.py  test_geometry.py  test_gnome_extension.py  test_goldeneye.py  test_hud_controller.py  test_huds.py  test_logsetup.py  test_mario.py  test_panel_dock.py  test_panel_window.py  test_params.py  test_persistence.py  test_pokemon.py  test_rules.py  test_settings_panel.py  test_sources.py  test_stardew.py  test_state.py  test_tray.py  test_widget_window.py
