[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gameify_notifications_overlay"
version = "0.2.0"
description = "Turn desktop notifications into a videogame HUD (CoD / Halo / Mario / Pokemon / GoldenEye)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Derek Marsch" }]
keywords = ["notifications", "overlay", "hud", "gameification", "dbus", "qt", "pyside6"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = ["PySide6>=6.5"]

# Linux notification capture also needs PyGObject (system package: python3-gi).
# Windows capture needs the winrt packages (see README); macOS is unsupported.
[project.optional-dependencies]
dev = ["pytest>=7", "pytest-qt>=4"]

[project.scripts]
gameify_notifications = "gameify_notifications.__main__:main"

[tool.setuptools.packages.find]
include = ["gameify_notifications*"]

[tool.setuptools.package-data]
gameify_notifications = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
